2005-04-23  Andrey Slusar  <anray@users.sourceforge.net>

	======= Release 5.1.3ds ========================
	------- CVS tag R513 ---------------------------
	* version.h (EXTRAVERSION): Bump to 5.1.3ds.
	* configure.in: Ditto.
	* packages/freebsd: Ditto.
	* doc/FAQ.ru: Now this is a confiuration mini FAQ
	(part 10 of FAQ_Config.ru).
	* doc/FAQ_Config.ru: Added full fidogate russian
	configuration FAQ.
	* doc/README.ru: Update.

2005-04-19  Andrey Slusar  <anray@users.sourceforge.net>

	* Changes.ru: Update.
	* doc/README.ru: Ditto.
	* doc/examples/dyff/fidogate.conf.sample.in:
	Ditto.
	* src/areafix/areafix.c (areafix_auth_check):
	Removed option AllowEmptyPwd. It's broke the
	areafix keys checking.
	* src/toss/ftnpack.c (do_pack): Fixed checking
	busy node(modified patch from Zhenya Kaluta).
	* src/common/lock.c (lock_lockfile_id): Fixed
	checking locks, not containing pid(patch from
	Zhenya Kaluta).

2004-12-10  Andrey Slusar  <anray@users.sourceforge.net>

	======= Release 5.1.2ds ========================
	------- CVS tag R512 ---------------------------	
	* version.h (EXTRAVERSION): bump to 5.1.2ds.
	* configure.in: ditto.

2004-12-01  Andrey Slusar  <anray@users.sourceforge.net>

	* version.h (EXTRAVERSION): bump to 5.1.2ds-rc4.
	* configure.in: ditto.
	* Changes.ru: update.
	* src/common/packet.c (pkt_get_msg_hdr): remove
	very strong headers checking.

2004-11-26  Andrey Slusar  <anray@users.sourceforge.net>

	* Changes.ru: update.

2004-11-20  Andrey Slusar  <anray@users.sourceforge.net>

	* doc/README.ru: update.

2004-11-18  Andrey Slusar  <anray@users.sourceforge.net>

	* version.h: bump to 5.1.2ds-rc3
	* configure.in: ditto
	* src/common/rematch.c: rename HAVE_REGEX_H to
	HAS_POSIX_REGEX
	* acconfig.h: ditto
	* src/include/prototypes.h: ditto
	* src/gate/rfc2ftn.c: rename HAVE_REGEX_H to
	HAS_POSIX_REGEX, fix HAS_POSIX_REGEX

2004-11-02  Andrey Slusar  <anray@users.sourceforge.net>

	* version.h: bump to 5.1.2ds-rc2
	* configure.in: ditto