@@ -1,5 +1,5 @@
 #
-# $Id: acl.sample,v 5.1 2004/12/10 19:09:51 anray Exp $
+# $Id: acl.sample,v 5.2 2005/11/23 23:12:22 anray Exp $
 #
 
 rfc2ftn
@@ -12,7 +12,7 @@ EchoMail
 alex@corex.izhora.spb.ru	*
 *				*
 
-rfc2ftn
+ftn2rfc
 
 NetMail
 2:5074/1229.7			*
