@@ -2,7 +2,7 @@
 /*****************************************************************************
  * FIDOGATE --- Gateway UNIX Mail/News <-> FIDO NetMail/EchoMail
  *
- * $Id: ftntick.c,v 5.1 2004/12/10 19:10:01 anray Exp $
+ * $Id: ftntick.c,v 5.2 2005/11/23 23:12:22 anray Exp $
  *
  * Process incoming TIC files
  *
@@ -37,7 +37,7 @@
 
 
 #define PROGRAM		"ftntick"
-#define VERSION		"$Revision: 5.1 $"
+#define VERSION		"$Revision: 5.2 $"
 #define CONFIG		DEFAULT_CONFIG_MAIN
 
 
@@ -369,14 +369,18 @@ int process_tic(Tick *tic)
 		int_uplinks = TRUE;
 	    }
 	    
-	    if( (a = uplinks_line_get(FALSE, &tic->from)) )
+	    a = uplinks_line_get(FALSE, &tic->from);
+	    if(a->options)
 	    {
-	    	tmp = (char*) xmalloc(strlen(tic->area) + strlen(autocreate_line) + strlen(a->options) + 3);
+	    	tmp = (char*) xmalloc(strlen(tic->area)
+				      + strlen(autocreate_line)
+				      + strlen(a->options) + 3);
 		sprintf(tmp,"%s %s %s", tic->area, autocreate_line, a->options);
 	    }
 	    else
 	    {
-		tmp = (char*) xmalloc(strlen(tic->area) + strlen(autocreate_line) + 2);
+		tmp = (char*) xmalloc(strlen(tic->area)
+				      + strlen(autocreate_line) + 2);
 		sprintf(tmp, "%s %s", tic->area, autocreate_line);
 	    }
 
