@@ -2,7 +2,7 @@
 /*****************************************************************************
  * FIDOGATE --- Gateway UNIX Mail/News <-> FIDO NetMail/EchoMail
  *
- * $Id: ftntoss.c,v 5.1 2004/12/10 19:10:01 anray Exp $
+ * $Id: ftntoss.c,v 5.2 2005/11/23 23:12:22 anray Exp $
  *
  * Toss FTN NetMail/EchoMail
  *
@@ -40,7 +40,7 @@
 
 
 #define PROGRAM 	"ftntoss"
-#define VERSION 	"$Revision: 5.1 $"
+#define VERSION 	"$Revision: 5.2 $"
 #define CONFIG		DEFAULT_CONFIG_MAIN
 
 
@@ -111,15 +111,12 @@ char l_flag = FALSE;			/* Create lock file */
 char p_flag = FALSE;			/* -p --passthru */
 
 static char in_dir[MAXPATH];		/* Input directory */
-
-
 static char must_exit = FALSE;		/* Flag for -x operation */
 static int  msg_count = 0;		/* Counter for -m, -x operation */
-
 static int  severe_error = OK;		/* ERROR: exit after error */
-
 static int  signal_exit = FALSE;	/* Flag: TRUE if signal received */
 
+short int   int_uplinks = FALSE;        /* Flag: TRUE if uplinks initialised */
 
 
 /*
@@ -923,9 +920,16 @@ int do_echomail(Packet *pkt, Message *msg, MsgBody *body)
 	    return OK;
 	}
 
+	if(!int_uplinks)
+	{
+	     uplinks_init();
+	     int_uplinks=TRUE;
+	}
 
-	if( (a = uplinks_line_get(TRUE, &msg->node_from)) )
-	    BUF_COPY5(autocreate_cmd, areaname, " ", autocreate_line, " ", a->options);
+	a = uplinks_line_get(TRUE, &msg->node_from);
+	if(a->options)
+	    BUF_COPY5(autocreate_cmd, areaname, " ",
+		      autocreate_line, " ", a->options);
 	else
 	    BUF_COPY3(autocreate_cmd, areaname, " ", autocreate_line);
 
